--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.DarkActionBar"/>
+    <!-- Customize your theme here. -->
     <string name="app_name">Tracha X</string>
     <string name="nav_open">Open Navigation Drawer</string>
     <string name="nav_close">Close Navigation Drawer</string>
     <!-- TODO: Remove or change this placeholder text -->
+
+    <string name="open">Open Navigation Drawer</string>
+    <string name="close">Close Navigation Drawer</string>
+    <!-- Add other strings here -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
